# tetris_linux

./: .gitignore  CMakeLists.txt  README.md
include/: Band.hpp  BaseBlock.hpp  Block1.hpp  Block2.hpp  Block3.hpp  Block4.hpp  Block5.hpp  Block6.hpp  Block7.hpp  BlockBoard.hpp  BlockCreator.hpp  EndgameText.hpp  Game.hpp  GlobalValues.hpp  ScoreCounter.hpp
main/: CMakeLists.txt
src/: Band.cpp  BaseBlock.cpp  Block1.cpp  Block2.cpp  Block3.cpp  Block4.cpp  Block5.cpp  Block6.cpp  Block7.cpp  BlockBoard.cpp  BlockCreator.cpp  CMakeLists.txt  EndgameText.cpp  Game.cpp  ScoreCounter.cpp  StartgameText.cpp  Tetris.cpp  main.cpp
